<resources>
    <string name="app_name">GoDutch</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_empty">Should not be empty</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="bottom_navi_groups">行程</string>
    <string name="bottom_navi_friends">朋友</string>
    <string name="bottom_navi_settings">設定</string>

    <string name="events_check">結帳</string>
    <string name="add_friends">加朋友</string>

    <string name="upload_image_successfully">上傳圖片成功</string>
    <string name="upload_image_failed">上傳圖片失敗</string>

    <!-- Facebook -->
    <string name="facebook_app_id">247296392442341</string>
    <string name="fb_login_protocol_scheme">fb247296392442341</string>

    <string name="log_out">登出</string>

    <string name="notify_new_event_title">%1$s 在 %2$s 記錄新的項目</string>
    <string name="notify_new_event_content">標題: %s</string>

    <string name="event_type_food">吃吃喝喝</string>
    <string name="event_type_shopping">大買特買</string>
    <string name="event_type_hotel">住宿</string>
    <string name="event_type_ticket">票券</string>
    <string name="event_paid_first">%s 先付錢</string>
    <string name="event_total_paid">總共花費 %s</string>

    <string name="action_settings">Settings</string>
    <string name="action_take_a_photo">拍張照</string>

    <string name="friend_paid">誰先墊錢</string>
    <string name="friends_shared">誰要拆帳</string>

    <string name="settle_up">已付清</string>
    <string name="remind">提醒</string>

    <string name="invite">邀請新好友</string>
</resources>
