<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_groups"
        android:enabled="true"
        android:icon="@drawable/ic_groups_black_24dp"
        android:title="@string/bottom_navi_groups"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_friends_black_24dp"
        android:title="@string/bottom_navi_friends"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/bottom_navi_settings"
        app:showAsAction="ifRoom" />
</menu>
